syntax = "proto3";            //指定版本信息，不指定会报错
option go_package = "./;data_struct";
package data_struct;            //后期生成go文件的包名
import "google/protobuf/any.proto";
//message为关键字，作用为定义一种消息类型
message QYCmdData {
  string  cmd = 1;
  google.protobuf.Any payload = 2;
}

